fix: alignment on category & categories rows

--- a/less/categories.less
+++ b/less/categories.less
@@ -4,7 +4,6 @@
 
 	> li {
 
-		padding-top: 10px;
 		padding-bottom: 10px;
 
 		@media (max-width: @screen-xs-max) {
@@ -17,6 +16,8 @@
 		min-height: 53px;
 
 		.content {
+			padding: 10px 15px;
+
 			.icon {
 				font-size: 17px;
 				line-height: 17px;
